# lmcache-experiments

./: .gitignore  lmcache_config.yaml  openai_llm.py  pyproject.toml  redis_offload.yaml  serve_cpu_offload_redis.sh  serve_cpu_offloading.sh  vllm_client.py
app/: vllm_client_cli.py
app/util/: __init__.py
conf/: lmcache_redis_config.yaml  logging_config.json
data/: conversation_history.txt  queries.txt
data/conversation_history/: conversation_history_1.json  conversation_history_2.json  conversation_history_3.json  conversation_history_4.json  conversation_history_5.json  conversation_history_6.json  conversation_history_7.json  conversation_history_8.json
results/: benchmark_redis_query.json  benchmark_redis_session.json
results/[context=8]_[shuffle=False]/: benchmark_redis_query.json  benchmark_redis_session.json  benchmark_wo_cpu_query.json  benchmark_wo_cpu_session.json
results/old/: benchmark_wo_cpu_query.json  benchmark_wo_cpu_session.json
scripts/: benchmark.sh  serve_cpu_offload_with_redis.sh  serve_wo_cpu_offload.sh
src/: benchmark.py  plot.py  test.py
src/utils/: __init__.py  client.py  log_metrics_collector.py
