[project]
name = "lmcache-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.46.0",
    "lmcache>=0.3.1.post1",
    "openai>=1.93.0",
    "python-json-logger>=3.3.0",
    "ruff>=0.12.2",
    "transformers>=4.53.0",
    "vllm>=0.9.1",
]
